[package]
name = "weight-d3"
version = "0.1.0"
edition = "2018"

build = "src/build.rs"

[build-dependencies]
actix-web-static-files = "3.0"

[dependencies]
actix-http = "2"
actix-web = "3"
actix-web-static-files = "3.0"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.4.0"
url = "2.2.0"

